{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 120,
  "lineage": "8813153b-9836-d02e-9d1e-aaca55432470",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elasticsearch_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c031a79ffb01a803",
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:instance/i-0a930caedefc106bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a930caedefc106bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "thanos-holesky-ec2-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b01e560125d0732",
            "private_dns": "ip-192-168-50-180.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.50.180",
            "public_dns": "ec2-43-201-35-56.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.35.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-028fbad7e935e53b3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0fd146a20ec797b",
            "tags": {
              "Name": "ElasticsearchInstance"
            },
            "tags_all": {
              "Name": "ElasticsearchInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f1e6418fdd27fcd0"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_key_pair.generated_key",
            "module.ec2_instance.aws_security_group.elasticsearch_sg",
            "module.ec2_instance.tls_private_key.ssh_key",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticsearch_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:security-group/sg-0f1e6418fdd27fcd0",
            "description": "Security group for Elasticsearch",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1e6418fdd27fcd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "elasticsearch-sg",
            "name_prefix": "",
            "owner_id": "992382494724",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-0c61e5716d5a0598e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "192.168.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c61e5716d5a0598e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2a",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-00153413c2ce0697d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "192.168.16.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00153413c2ce0697d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2b",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-0f37bf568dfbc5659",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "192.168.32.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f37bf568dfbc5659",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2c",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          }
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:vpc/vpc-0bc271e121da1e209",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e6fc208e7f4e7114",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01bfa8987d676addb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc271e121da1e209",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-024ae4bced1e06497",
            "owner_id": "992382494724",
            "tags": {
              "Name": "thanos-holesky/VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:security-group/sg-0e54bafbe4852c322",
            "description": "EFS security group",
            "egress": [],
            "id": "sg-0e54bafbe4852c322",
            "ingress": [],
            "name": "thanos-holesky",
            "name_prefix": "",
            "owner_id": "992382494724",
            "revoke_rules_on_delete": true,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": "NFS ingress from VPC private subnets",
            "from_port": 2049,
            "id": "sgrule-3012544516",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e54bafbe4852c322",
            "security_group_rule_id": "sgr-0062859c244c64a6a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs.aws_security_group.this",
            "module.efs.data.aws_vpc.vpc",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:security-group/sg-0b171996598006474",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b171996598006474",
            "ingress": [],
            "name": "thanos-holesky-cluster-2024103101544626730000000c",
            "name_prefix": "thanos-holesky-cluster-",
            "owner_id": "992382494724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "thanos-holesky-cluster"
            },
            "tags_all": {
              "Name": "thanos-holesky-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:security-group/sg-079f6ea5a1ab11825",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-079f6ea5a1ab11825",
            "ingress": [],
            "name": "thanos-holesky-node-2024103101544645690000000d",
            "name_prefix": "thanos-holesky-node-",
            "owner_id": "992382494724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "thanos-holesky-node",
              "kubernetes.io/cluster/thanos-holesky": "owned"
            },
            "tags_all": {
              "Name": "thanos-holesky-node",
              "kubernetes.io/cluster/thanos-holesky": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3841064324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b171996598006474",
            "security_group_rule_id": "sgr-0d7d764a72b34457c",
            "self": false,
            "source_security_group_id": "sg-079f6ea5a1ab11825",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-534420752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-0dc62cc02d77a1934",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3160730035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-0c635d6970938bed7",
            "self": false,
            "source_security_group_id": "sg-0b171996598006474",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1702327745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-09cf81253a258a1d8",
            "self": false,
            "source_security_group_id": "sg-0b171996598006474",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2889159255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-0935fcc590cffec7a",
            "self": false,
            "source_security_group_id": "sg-0b171996598006474",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3211341430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-053be3dd624d8c1ce",
            "self": false,
            "source_security_group_id": "sg-0b171996598006474",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3687325117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-08dc3a05ab7def5cc",
            "self": false,
            "source_security_group_id": "sg-0b171996598006474",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-983678791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-00a5e5ac42f7cf25b",
            "self": false,
            "source_security_group_id": "sg-0b171996598006474",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2632955333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-0424e9ed312d6da1c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1097841086",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-073c67dc430a9c424",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3845134929",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-079f6ea5a1ab11825",
            "security_group_rule_id": "sgr-0b9c7405fe1512e75",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.k8s.module.eks-external-secrets",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "external_secrets",
      "provider": "module.k8s.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "thanos",
            "metadata": [
              {
                "generation": 0,
                "name": "thanos",
                "resource_version": "2797",
                "uid": "51d21fff-4249-40cf-910e-f6d3a07106ff"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_eks_access_entry.this",
            "module.eks.module.eks.aws_eks_access_policy_association.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_region.current",
            "module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.eks.time_sleep.this",
            "module.k8s.aws_iam_role_policy.controller",
            "module.k8s.data.http.iam_policy",
            "module.k8s.helm_release.aws-load-balancer-controller",
            "module.k8s.module.lb_controller_role.aws_iam_role.this",
            "module.k8s.module.lb_controller_role.aws_iam_role_policy.inline",
            "module.k8s.module.lb_controller_role.aws_iam_role_policy_attachment.custom",
            "module.k8s.module.lb_controller_role.data.aws_caller_identity.current",
            "module.k8s.module.lb_controller_role.data.aws_iam_policy_document.assume_role_with_oidc",
            "module.k8s.module.lb_controller_role.data.aws_iam_policy_document.inline",
            "module.k8s.module.lb_controller_role.data.aws_partition.current",
            "module.k8s.null_resource.kubectl",
            "module.secretsmanager.aws_secretsmanager_secret.this",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_caller_identity.current",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_partition.current",
            "module.vpc.module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.lambda",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:security-group/sg-0ecca0e7b2897f082",
            "description": "Security group for Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecca0e7b2897f082",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "992382494724",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.rds",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:vpc/vpc-0bc271e121da1e209",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e6fc208e7f4e7114",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01bfa8987d676addb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc271e121da1e209",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-024ae4bced1e06497",
            "owner_id": "992382494724",
            "tags": {
              "Name": "thanos-holesky/VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds.module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:security-group/sg-0959148fb92b12f01",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-0959148fb92b12f01",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "ingress from VPC private subnets",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "thanos-holesky-rds_for_rds",
            "name_prefix": "",
            "owner_id": "992382494724",
            "revoke_rules_on_delete": true,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.rds.data.aws_vpc.vpc",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:network-acl/acl-043b4a38fc6da25f1",
            "default_network_acl_id": "acl-043b4a38fc6da25f1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-043b4a38fc6da25f1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "992382494724",
            "subnet_ids": [
              "subnet-00153413c2ce0697d",
              "subnet-009e3ca70cb19b372",
              "subnet-0b0fd146a20ec797b",
              "subnet-0bdb6fa214e1f9976",
              "subnet-0c61e5716d5a0598e",
              "subnet-0f37bf568dfbc5659"
            ],
            "tags": {
              "Name": "thanos-holesky/VPC-default"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-default"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:route-table/rtb-024ae4bced1e06497",
            "default_route_table_id": "rtb-024ae4bced1e06497",
            "id": "rtb-024ae4bced1e06497",
            "owner_id": "992382494724",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "thanos-holesky/VPC-default"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:security-group/sg-073b2c02193af7934",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-073b2c02193af7934",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "992382494724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "thanos-holesky/VPC-default"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-default"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00181d6ab28a46a24",
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:elastic-ip/eipalloc-00181d6ab28a46a24",
            "domain": "vpc",
            "id": "eipalloc-00181d6ab28a46a24",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-25-49.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.25.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "thanos-holesky/VPC-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-ap-northeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:internet-gateway/igw-0fce51364b26370b2",
            "id": "igw-0fce51364b26370b2",
            "owner_id": "992382494724",
            "tags": {
              "Name": "thanos-holesky/VPC"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00181d6ab28a46a24",
            "association_id": "eipassoc-0606299269f141464",
            "connectivity_type": "public",
            "id": "nat-0235f35b8034f5291",
            "network_interface_id": "eni-056d31d0f7daa95f6",
            "private_ip": "192.168.60.89",
            "public_ip": "43.202.25.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b0fd146a20ec797b",
            "tags": {
              "Name": "thanos-holesky/VPC-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00fa4eaea852a284a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0235f35b8034f5291",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fa4eaea852a284a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fce51364b26370b2",
            "id": "r-rtb-01290e0e89c0200721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01290e0e89c020072",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:route-table/rtb-00fa4eaea852a284a",
            "id": "rtb-00fa4eaea852a284a",
            "owner_id": "992382494724",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "thanos-holesky/VPC-private"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:route-table/rtb-01290e0e89c020072",
            "id": "rtb-01290e0e89c020072",
            "owner_id": "992382494724",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "thanos-holesky/VPC-public"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe4c23e6d539109d",
            "route_table_id": "rtb-00fa4eaea852a284a",
            "subnet_id": "subnet-0c61e5716d5a0598e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01788afecb2bb20c7",
            "route_table_id": "rtb-00fa4eaea852a284a",
            "subnet_id": "subnet-00153413c2ce0697d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052c64e7beb088212",
            "route_table_id": "rtb-00fa4eaea852a284a",
            "subnet_id": "subnet-0f37bf568dfbc5659"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc9ddff3cc324b31",
            "route_table_id": "rtb-01290e0e89c020072",
            "subnet_id": "subnet-0b0fd146a20ec797b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c2c67aabdc4d026",
            "route_table_id": "rtb-01290e0e89c020072",
            "subnet_id": "subnet-009e3ca70cb19b372"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e289764f163f232",
            "route_table_id": "rtb-01290e0e89c020072",
            "subnet_id": "subnet-0bdb6fa214e1f9976"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-0c61e5716d5a0598e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c61e5716d5a0598e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2a",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2a",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-00153413c2ce0697d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00153413c2ce0697d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2b",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2b",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-0f37bf568dfbc5659",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f37bf568dfbc5659",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2c",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-private-ap-northeast-2c",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-0b0fd146a20ec797b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0fd146a20ec797b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "thanos-holesky/VPC-public-ap-northeast-2a",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-public-ap-northeast-2a",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-009e3ca70cb19b372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009e3ca70cb19b372",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "thanos-holesky/VPC-public-ap-northeast-2b",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-public-ap-northeast-2b",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:subnet/subnet-0bdb6fa214e1f9976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdb6fa214e1f9976",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382494724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "thanos-holesky/VPC-public-ap-northeast-2c",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC-public-ap-northeast-2c",
              "kubernetes.io/cluster/thanos-holesky": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bc271e121da1e209"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382494724:vpc/vpc-0bc271e121da1e209",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-043b4a38fc6da25f1",
            "default_route_table_id": "rtb-024ae4bced1e06497",
            "default_security_group_id": "sg-073b2c02193af7934",
            "dhcp_options_id": "dopt-01bfa8987d676addb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc271e121da1e209",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024ae4bced1e06497",
            "owner_id": "992382494724",
            "tags": {
              "Name": "thanos-holesky/VPC"
            },
            "tags_all": {
              "Name": "thanos-holesky/VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}